...
        }
        action.backgroundColor = .systemGreen
        return action
    }
    
    private static func delete(handler: @escaping () -> ()) -> UIContextualAction {
        let action = UIContextualAction(style: .normal, title: "Delete") { _, _, completionHandler in
            handler()
            UINotificationFeedbackGenerator().notificationOccurred(.success)
            completionHandler(true)
        }
        action.backgroundColor = .systemRed
        return action
...
